unpackaged/main/default/objects/Onboarding_Task__c/fields/Onboarding_Project__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Project</label>
    <referenceTo>Onboarding_Project_c__c</referenceTo>
    <relationshipLabel>Onboarding Tasks</relationshipLabel>
    <relationshipName>Onboarding_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>