unpackaged/main/default/objects/Onboarding_Task__c/validationRules/Require_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Due_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Status__c, &quot;In Progress&quot;),
    ISPICKVAL(Status__c, &quot;Completed&quot;)
  ),
  ISBLANK(Due_Date__c)
)</errorConditionFormula>
    <errorMessage>Please enter a Due Date before setting the task In Progress or Completed</errorMessage>
</ValidationRule>